@@ -2,3 +2,5 @@
 - watcherotic - fix thumbnails
 - longvideos - new site
 - ividz - removed
+- kissjav - fix playback
+- xtheatre - fix playback
